kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: monitoring
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /homework
          name: html
        - mountPath: /etc/nginx/conf.d/
          name: nginx-conf
        - mountPath: /homework/conf
          name: my-configmap
        lifecycle:
          preStop:
            exec:
              command:
                - "rm"
                - "/homework/index.html"
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: my-configmap
        configMap:
          name: my-configmap
      - name: html
        persistentVolumeClaim:
            claimName: nginx-html-pvc
